fixing z-index

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -124,10 +124,10 @@ html body {
   --z-index-drawer: 200;
   --z-index-overlay: 300;
   --z-index-popover: 400;
-  --z-index-tooltip: 500;
   --z-index-notification: 600;
   --z-index-excalidraw: 900;
   --z-index-tool-buttons: 1000;
+  --z-index-tooltip: 9999;
   
   --left-vertical-collapsed-menu-width: 48px;
   
